Actualizado con JPA y  MySQL